# scicode-widgets-unofficial

.github/workflows/: tests.yml
python/: MANIFEST.in  README  pyproject.toml  setup.cfg  setup.py
python/examples/: 00-Getting_started-checkfile.ipynb  00-Getting_started-copyoutput.ipynb  00-Getting_started.ipynb  01-Atomic_scale_structures.ipynb  02-Crystallography.ipynb  VisualCues-refactor-v3.3.ipynb  check_registry_examples.ipynb  checker_file-reciprocal_lattice_examples.json  demo-answers-michele.json  demo-check_functionality-reference.json  demo-check_functionality.ipynb  demo_answers.ipynb  module_0_checker.json  new-checkregistry.ipynb  reciprocal_lattice_examples.ipynb  saving_answers.ipynb  visual_cues_examples.ipynb
python/scwidgets/: __init__.py  _answer.py  _check_registry.py  _code_demo.py  _code_visualizer.py  _state_widgets.py  _utils.py  scwidget_style.css
python/tests/: tests.py
