[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.tox]
legacy_tox_ini = """
[tox]

[testenv:tests]
changedir = tests
deps =
    coverage[toml]
    ipympl
    parameterized

commands =
    coverage run -m unittest discover -p "*.py"

[testenv:examples]
changedir = examples
allowlist_externals = /bin/bash

deps =
    ipympl
    chemiscope
    ase

commands =
    bash -ec "\
        SCWIDGET_EXAMPLES=$PWD; \
        for file in $(find . -name '*.ipynb' -not -path '*/\\.*'); do \
            filename=$(basename $file); \
            jupyter nbconvert \
                --to notebook \
                --output "$SCWIDGET_EXAMPLES/../.tox/examples/$filename" \
                --execute "$file"; \
    done"
"""
