[metadata]
name = scwidgets
author = Alexander Goscinski, Michele Ceriotti
author_email = alexander.goscinski@epfl.ch
description = A collection of thin widget wrappers to build educative interactive notebooks 
; keywords =

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires = numpy
                   widget_code_input
                   matplotlib
                   ipywidgets==7.7.2
                   traitlets
                   ipympl
