[metadata]
name = scwidgets
author = Alexander Goscinski, Michele Ceriotti
author_email = alexander.goscinski@epfl.ch
description = A collection of thin widget wrappers to build educative interactive notebooks 
; keywords =

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires = numpy
                   widget_code_input == 3.1
#                   widget_code_input >= 3.5.0 # first needs fix of issue https://github.com/jupyter-widgets/widget-ts-cookiecutter/issues/120
                   matplotlib
                   ipywidgets >= 8.0.0
                   traitlets
                   ipympl
