[metadata]
name = scwidgets
author = Alexander Goscinski, Michele Ceriotti
author_email = alexander.goscinski@epfl.ch
description = A collection of thin widget wrappers to build educative interactive notebooks 
; keywords =

[options]
include_package_data = True
zip_safe = True
packages = find:
install_requires = numpy
                   widget_code_input >= 3.5.0 # == if need to install in Noto
                   jupyterlab-widgets >= 3.0.5
                   widgetsnbextension >=4.0.5
                   matplotlib
                   ipywidgets >= 8.0.4
                   traitlets
                   ipympl
